<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.asus.sanguo.CharacterEdit">

    <TextView
        android:id="@+id/skilladd_pro_owner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailproshape"
        android:gravity="center"
        android:text="@string/owner"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/skilladd_owner"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:entries="@array/fatetype"
        android:background="@drawable/detailtexthape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skilladd_pro_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skilladd_pro_type"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailproshape"
        android:gravity="center"
        android:text="@string/type"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_pro_owner" />

    <Spinner
        android:id="@+id/skilladd_type"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:entries="@array/fatetype"
        android:background="@drawable/detailtexthape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skilladd_pro_type"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_owner" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/skilladd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailtexthape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skilladd_pro_name"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_type">

        <EditText
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/skilladd_pro_name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailproshape"
        android:ems="5"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_pro_type"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/skilladd_level"
        android:layout_marginTop="5dp"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:entries="@array/level"
        android:background="@drawable/detailtexthape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skilladd_pro_stre"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_pro_name"/>

    <TextView
        android:id="@+id/skilladd_pro_stre"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailproshape"
        android:ems="5"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_pro_name"
        tools:ignore="MissingConstraints" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/detailtexthape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_pro_introduction">

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="20"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="8"
            android:scrollbars="vertical"
            android:textSize="14sp"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/add_pro_introduction"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/detailproshape"
        android:ems="5"
        android:gravity="center"
        android:text="@string/introduction"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skilladd_level"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/skilladd_buttonconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/detailbuttonshape"
        android:text="@string/confirm"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skilladd_buttoncancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_introduction" />

    <Button
        android:id="@+id/skilladd_buttoncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/detailbuttonshape"
        android:text="@string/cancel"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skilladd_buttonconfirm"
        app:layout_constraintTop_toBottomOf="@+id/add_introduction" />

</android.support.constraint.ConstraintLayout>
