<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context="com.example.asus.sanguo.EditCharacter">

        <Spinner
            android:id="@+id/add_image_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:entries="@array/image"
            android:textSize="18sp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_imageframe" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/add_imageframe"
            android:layout_width="310dp"
            android:layout_height="360dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/add_pro_job"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:gravity="center"
            android:text="@string/property_job"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_image_name" />

        <Spinner
            android:id="@+id/add_job"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:entries="@array/fatejob"
            android:background="@drawable/detailtexthape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_job"
            app:layout_constraintTop_toBottomOf="@+id/add_image_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_name"
            app:layout_constraintTop_toBottomOf="@+id/add_job">

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_name"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_name"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_job"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/add_sex"
            android:layout_marginTop="5dp"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:entries="@array/sexselect"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_sex"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_name"/>

        <TextView
            android:id="@+id/add_pro_sex"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_sex"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_name"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_datebirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_datebirth"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_sex">

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:ems="20"
                android:inputType="number"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_datebirth"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_date_birth"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_sex"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_datedeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_datedeath"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_datebirth">

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:ems="20"
                android:inputType="number"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_datedeath"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_date_death"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_datebirth"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_origo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_origo"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_datedeath">

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:ems="20"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_origo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_origo"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_datedeath"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_army"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_pro_army"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_origo">

            <EditText
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:ems="20"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_army"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_army"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_origo"
            tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detailtexthape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_pro_introduction">

            <EditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="8"
                android:scrollbars="vertical"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_pro_introduction"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/detailproshape"
            android:ems="5"
            android:gravity="center"
            android:text="@string/property_introduction"
            android:textColor="@color/colorwhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_army"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/add_buttonconfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/detailbuttonshape"
            android:text="@string/confirm"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_buttoncancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_introduction" />

        <Button
            android:id="@+id/add_buttoncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/detailbuttonshape"
            android:text="@string/cancel"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/add_buttonconfirm"
            app:layout_constraintTop_toBottomOf="@+id/add_introduction" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
